tests/reject/string_literal.alg
sort S : Sort;
op s : → S;
eq a s = "hello";
